--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: aliceblue;
+    background-color: #141414;
+    font-family: 'Segoe UI';
+}
+
+a {
+    text-decoration: none;
+}
+
+body {
+    padding-bottom: 100px;
+}
