updating project to solve bug

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,10 @@
 <main>
-    <app-header></app-header>
     <app-blog-title></app-blog-title>
     <div class="articles-container">
-        <app-main-card></app-main-card>
+        <app-main-card articlePhoto="https://picsum.photos/500/354" articleDescription="Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae, error deserunt inventore a
+        itaque aliquid libero rerum, pariatur velit minima alias nesciunt ullam. Officiis?"
+            articleTitle="Algum titulo aqui" id="1">
+        </app-main-card>
         <aside>
             <app-small-card></app-small-card>
             <app-small-card></app-small-card>
