--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -1,14 +1,14 @@
 <article class="main-card-container">
-    <a href="#">
+
+    <a [routerLink]="['artile',id]">
         <div class="main-card-photo">
-            <img src="https://picsum.photos/500/354" alt="">
+            <img src="{{articlePhoto}}" alt="">
         </div>
         <div class="main-card-title">
-            <h2>Algum titulo aqui</h2>
+            <h2>{{articleTitle}}</h2>
         </div>
         <div class="main-card-description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae, error deserunt inventore a
-                itaque aliquid libero rerum, pariatur velit minima alias nesciunt ullam. Officiis?</p>
+            <p>{{articleDescription}}</p>
         </div>
     </a>
 </article>
