desktop version project finished

--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -1,6 +1,5 @@
 <article class="main-card-container">
-
-    <a [routerLink]="['artile',id]">
+    <a [routerLink]="['article',id]">
         <div class="main-card-photo">
             <img src="{{articlePhoto}}" alt="">
         </div>
